Login, top ten cocktails

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,20 @@
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        {% for message in messages %}
+            {{ message }}
+        {% endfor %}
+    {% endif %}
+    {% endwith %}
     <script
         src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/static/css/site.css">
+    <a href="/login">Login</a>
+    <a href="/register">Register</a>
 </head>
 <body>
     <h1>Cocktail Party</h1>
