--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,6 +13,22 @@
         <input type="submit" value="Search">
     </form>
 </div>
+<nav>
+    <ul>
+        <li>
+            <a href="/"> Top Ten Cocktails </a>
+        </li>
+        <li>
+            <a href="/liquor"> Liquor Type </a>
+        </li>
+        <li>
+            <a href="/letter"> Alphabetical </a>
+        </li>
+        <li>
+            <a href="/event"> My Profile </a>
+        </li>
+    </ul>
+</nav>
 <div class="cocktail">
     {% for cocktails in results %}
         {% for cocktail in cocktails %}
