--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -25,7 +25,7 @@
             <a href="/letter"> Alphabetical </a>
         </li>
         <li>
-            <a href="/event"> My Profile </a>
+            <a href="/my_profile"> My Profile </a>
         </li>
     </ul>
 </nav>
