--- a/templates/cocktail-details.html
+++ b/templates/cocktail-details.html
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container">
-        {{ name }}
+        <p> {{ name }} </p>
         <img src="{{ url }}">
         {{ instructions }}
         {% for ingredient in ingredients %}
@@ -17,9 +17,10 @@
         <form action='/handle_event_form' method="POST">
             <select name="events">
             {% for event in events %}
-                <option value={{event.name}}> {{ event.name }} </option>
+                <option value={{event.event_id}}> {{ event.name }}</option>
             {% endfor %}
             </select>
+            <input type="hidden" name="cocktail_id" value= {{cocktail_id}}>
             <input type="submit">
         </form>
                     
