User event_cocktails display when user clicks on event

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,22 @@
     <a href="/">
         <h1>Cocktail Party</h1>
     </a>
+    <nav>
+    <ul>
+        <li>
+            <a href="/"> Top Ten Cocktails </a>
+        </li>
+        <li>
+            <a href="/liquor"> Liquor Type </a>
+        </li>
+        <li>
+            <a href="/letter"> Alphabetical </a>
+        </li>
+        <li>
+            <a href="/my_profile"> My Profile </a>
+        </li>
+    </ul>
+</nav>
     {% block body %}
     {% endblock %}
 
