--- a/templates/my-profile.html
+++ b/templates/my-profile.html
@@ -24,11 +24,11 @@
         </ul>
     </div>
 
-    <div id="event_cocktails">
+    <div class="event_cocktails">
         {% for cocktails in results %}
             {% for cocktail in cocktails %}
-                <a href="/cocktail/{{ cocktail['idDrink'] }}">
-                <img src="{{ cocktail['strDrinkThumb'] }}">
+                <a href="/cocktail/{{ cocktail['idDrink'] }}" id="cocktail_link">
+                <img src="{{ cocktail['strDrinkThumb'] }}" id="cocktail_img">
                 {{ cocktail['strDrink'] }}
                 </a>
             {% endfor %}
@@ -38,15 +38,22 @@
     <script>
         $("button").click(function() {
             const inputData = {event_id: $(this).find('input:hidden').val()};
+            const currentImg = $('.event_cocktails');
+            currentImg.empty();
             $.get('/event_cocktails.json', inputData, (res) => {
-                const cocktail_ids = `${res.cocktails}`
-                for (let cocktail_id of cocktail_ids) {
-                    apiData = {i: cocktail_id}
+                const cocktail_ids = `${res.cocktails}` //string datatype
+                const result = cocktail_ids.split(",");        
+                for (let cocktail_id of result) {
+                    apiData = {'i': cocktail_id}
                     const url = 'https://www.thecocktaildb.com/api/json/v1/1/lookup.php'
                     $.get(url, apiData, (res) => {
-                    alert(`${res.drinks}`)
-                    })
-                }
+                        const event_cocktail = res.drinks;
+                        const cocktail = event_cocktail[0];
+                        currentImg.append("<a href='/cocktail/" + cocktail.idDrink + 
+                            "'>" + "<img src=" + cocktail.strDrinkThumb + ">" +
+                            cocktail.strDrink + "</a>");
+                    });
+                };
             });
         });
     </script>
