added liquor types to menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,19 +22,14 @@
     <link rel="stylesheet" href="/static/css/site.css">
 </head>
 <body>
-    <a href="/">
-        <h1>Cocktail Party</h1>
-    </a>
+    <h1>Cocktail Party</h1>
     <nav>
     <ul>
         <li>
-            <a href="/"> Top Ten Cocktails </a>
+            <a href="/"> Home </a>
         </li>
         <li>
-            <a href="/liquor"> Liquor Type </a>
-        </li>
-        <li>
-            <a href="/letter"> Alphabetical </a>
+            <a href="/popular_liquor_types"> Popular Liquor Types </a>
         </li>
         <li>
             <a href="/my_profile"> My Profile </a>
