added alphabet search feature

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,9 +35,36 @@
             <a href="/my_profile"> My Profile </a>
         </li>
     </ul>
-</nav>
+    </nav>
+    <div id="alphabet" name="letter">
+        <a href="/browse/A">A</a>|
+        <a href="/browse/B">B</a>|
+        <a href="/browse/C">C</a>|
+        <a href="/browse/D">D</a>|
+        <a href="/browse/E">E</a>|
+        <a href="/browse/F">F</a>|
+        <a href="/browse/G">G</a>|
+        <a href="/browse/H">H</a>|
+        <a href="/browse/I">I</a>|
+        <a href="/browse/J">J</a>|
+        <a href="/browse/K">K</a>|
+        <a href="/browse/L">L</a>|
+        <a href="/browse/M">M</a>|
+        <a href="/browse/N">N</a>|
+        <a href="/browse/O">O</a>|
+        <a href="/browse/P">P</a>|
+        <a href="/browse/Q">Q</a>|
+        <a href="/browse/R">R</a>|
+        <a href="/browse/S">S</a>|
+        <a href="/browse/T">T</a>|
+        <a href="/browse/U">U</a>|
+        <a href="/browse/V">V</a>|
+        <a href="/browse/W">W</a>|
+        <a href="/browse/X">X</a>|
+        <a href="/browse/Y">Y</a>|
+        <a href="/browse/Z">Z</a>
+    </div>
     {% block body %}
     {% endblock %}
-
 </body>
 </html>
