User must be logged in to see cocktail details

--- a/templates/cocktail-details.html
+++ b/templates/cocktail-details.html
@@ -23,6 +23,7 @@
             <input type="hidden" name="cocktail_id" value= {{cocktail_id}}>
             <input type="submit">
         </form>
+    </div>
                     
 
 {% endblock %}
