added recommended cocktails feature

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,9 @@
         </li>
         {% if session %}
             <li>
+                <a href="/recommended_cocktails"> Recommended Cocktails </a>
+            </li>
+            <li>
                 <a href="/my_profile"> My Profile </a>
             </li>
         {% endif %}
