--- a/templates/browse-by-letter.html
+++ b/templates/browse-by-letter.html
@@ -3,14 +3,16 @@
 {% block title %} Browse {% endblock %}
 
 {% block body %}
-
     {% for cocktails in results %}
         {% for cocktail in cocktails %}
-            <a href="/cocktail/{{ cocktail['idDrink'] }}">
-            <img src="{{ cocktail['strDrinkThumb'] }}">
-            {{ cocktail['strDrink'] }}
-            </a>
+            {% if session %}
+                <a href="/cocktail/{{ cocktail['idDrink'] }}">
+            {% else %}
+                <a href="/login">
+            {% endif %}
+                <img src="{{ cocktail['strDrinkThumb'] }}">
+                {{ cocktail['strDrink'] }}
+                </a>
         {% endfor %}
     {% endfor %}
-
 {% endblock %}
