--- a/templates/my-profile.html
+++ b/templates/my-profile.html
@@ -6,7 +6,7 @@
     Hi {{ user.fname }}, welcome to your profile.
 
     <form action="/create_new_event" method="POST">
-        Event Name: <input type="text" name="name">
+        New Event Name: <input type="text" name="name">
         <input type="submit">
     </form>
 
