--- a/templates/liquor-types.html
+++ b/templates/liquor-types.html
@@ -3,16 +3,28 @@
 {% block title %} Liquor Types {% endblock %}
 
 {% block body %}
-
-<div class="cocktail">
-    <h1>Popular Liquor Types</h1>
-    {% for cocktails in results %}
-        {% for cocktail in cocktails %}
-            <a href="/ingredient/{{ cocktail['strIngredient'] }}">
-                <img src="https://www.thecocktaildb.com/images/ingredients/{{ cocktail['strIngredient'] }}-small.png">
-                {{ cocktail['strIngredient'] }}
-            </a>
-        {% endfor %}
-    {% endfor %}
-</div>
+    <div class="container-fluid padding">
+        <div class="row top-cocktails">
+            <div class="col-12">
+                <h1 class="display-4">Popular Liquor Types</h1>
+            </div>
+            <hr>
+        </div>
+        <div class="container-fluid padding">
+            <div class="row padding">
+                {% for cocktails in results %}
+                    {% for cocktail in cocktails %}
+                        <div class="col-md-3">
+                            <div class="card">
+                                <a href="/ingredient/{{ cocktail['strIngredient'] }}" class="card-link">
+                                <img src="https://www.thecocktaildb.com/images/ingredients/{{ cocktail['strIngredient'] }}-medium.png" class="card-img-top">
+                                <h5 class="card-title"> {{ cocktail['strIngredient'] }} </h5>
+                                </a>
+                            </div>
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
