--- a/static/css/site.css
+++ b/static/css/site.css
@@ -32,3 +32,62 @@ div#login-logout {
     background-size: cover;
 }*/
 
+head {
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.footer {
+  margin: 0;
+  position: relative;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: auto;
+  line-height: auto;
+  background-color: #f5f5f5;
+}
+
+.card {
+  border: 0;
+}
+
+.card-title {
+  text-align: center;
+  color: #222222;
+}
+
+.card-img-top {
+  border-radius: 8px;
+}
