--- a/templates/login.html
+++ b/templates/login.html
@@ -3,11 +3,31 @@
 {% block title %} Login {% endblock %}
 
 {% block body %}
+<!--     <form action="/login" method="POST" class="dropdown-menu p-4">
+        <div class="form-group">
+            <label>Username</label>
+            <input type="text" name="username" autocomplete="off" class="form-control">
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password" name="password" autocomplete="off" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-primary">Sign In</button>
+    </form> -->
 
-    <form action="/login" method="POST">
-        Username: <input type="text" name="username" autocomplete="off">
-        Password: <input type="password" name="password" autocomplete="off">
-        <input type="submit">
+
+<body class="text-center">
+    <form action="/login" method="POST" class="form-signin">
+      <label for="inputUsername" class="sr-only">Username</label>
+      <input type="text" name="username" class="form-control" placeholder="Username" required autofocus>
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input type="password" name="password" class="form-control" placeholder="Password" required>
+      <div class="checkbox mb-3">
+        <label>
+          <input type="checkbox" value="remember-me"> Remember me
+        </label>
+      </div>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
-
+  </body>
 {% endblock %}
