--- a/templates/my-profile.html
+++ b/templates/my-profile.html
@@ -8,10 +8,10 @@
     <form class="form-inline" action="/create_new_event" method="POST">
         <div class="form-group">
             <input type="text" name="name" class="form-control" placeholder="Create New Event">
-            <input type="submit" class="form-control">
+            <button class="btn btn-primary" type="submit">Submit</button>
         </div>
     </form>
-
+    <br>
 
     <div class="card text-center">
         <div class="card-header">
